[package]
name = "plent"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.12"
tokio = { version = "1.28.2", features = [
  "net",
  "sync",
  "rt",
  "parking_lot",
], default-features = false }
clipline = "0.1.2"
serenity = { version = "0.12", features = [
  "builder",
  "client",
  "rustls_backend",
  "gateway",
], default-features = false }
poise = { git = "https://github.com/serenity-rs/poise" }
anyhow = "1.0.75"
regex = { version = "1.8.4", features = ["std"], default-features = false }
btparse = "0.1.1"
mindus = { version = "5.0.7", features = [], default-features = false }
flate2 = { version = "1.0", features = [
  "cloudflare_zlib",
], default-features = false }
lemu = { features = ["diagnose"], default-features = false, version = "0.2.0" }
dashmap = "5.5.3"
oxipng = { version = "9.0.0", default-features = false }
fimg = "0.4.26"
phf = { version = "0.11.2", features = ["macros"] }
emoji = { git = "https://github.com/Apricot-Conservation-Project/emoji", version = "0.1.0" }

[profile.release]
strip = true
lto = "thin"

[profile.dev.package.mindus]
opt-level = 3
debug-assertions = false

[profile.dev.package.fimg]
opt-level = 3
debug-assertions = false

[patch.crates-io]
serenity = { git = "https://github.com/bend-n/serenity", branch = "opt" }
