[package]
name = "plent"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.12"
tokio = { version = "1.28.2", features = [
  "net",
  "sync",
  "rt",
  "parking_lot",
], default-features = false }
clipline = "0.1.2"
serenity = { version = "0.12", features = [
  "builder",
  "client",
  "rustls_backend",
  "gateway",
  "model",
], default-features = false }
poise = { git = "https://github.com/fgardt/poise", branch = "feat/user_apps" }
anyhow = "1.0.75"
regex = { version = "1.8.4", features = ["std"], default-features = false }
mindus = { version = "5.0.7", features = [], default-features = false }
flate2 = { version = "1.0", features = [
  "cloudflare_zlib",
], default-features = false }
lemu = { features = ["diagnose"], default-features = false, version = "0.2.0" }
dashmap = "5.5.3"
oxipng = { version = "9.0.0", default-features = false }
fimg = "0.4.26"
phf = { version = "0.11.2", features = ["macros"] }
emojib = { git = "https://github.com/Apricot-Conservation-Project/emoji", package = "emoji" }
rust-fuzzy-search = "0.1.1"
jemallocator-global = "0.3.2"
const_format = { version = "0.2.32", features = ["fmt"] }
logos = "0.14.0"
base64 = "0.21.7"
humantime = "2.1.0"
memory-stats = { version = "1.1.0", features = ["always_use_statm"] }
axum = { version = "0.6.18", features = [
  "tokio",
  "http1",
  "macros",
], default-features = false }
serde_json = "1.0.122"
serde = "1.0.204"
atools = "0.1.5"
# edg = { path = "../edg" }
httpdate = "1.0.3"
pollster = "0.3.0"
btparse-stable = "0.1.2"
cpu-monitor = "0.1.1"

[build-dependencies]
emojib = { git = "https://github.com/Apricot-Conservation-Project/emoji", features = [
  "build",
], package = "emoji" }

[profile.release]
strip = true
lto = "thin"

[profile.dev.package.mindus]
opt-level = 3
debug-assertions = false

[profile.dev.package.fimg]
opt-level = 3
debug-assertions = false

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity" }
mindus = { git = "https://github.com/bend-n/mindus" }
